<resources>
    <string name="app_name">Academic Glider </string>
    <string name="myglider">Mi Glider </string>
    <string name="notifications">Home </string>
    <string name="asignaturas">Subjects </string>
    <string name="apuntes">Notes </string>
    <string name="calificables">Qualifiables </string>
    <string name="lecturas">Readings </string>
    <string name="horarios">Schedules </string>
    <string name="alertas">Alerts </string>
    <string name="community">Academic Community </string>
    <string name="university">University </string>
    <string name="select_university">Select University </string>
    <string name="insert_2_password">You must enter 2 times, the password, to update or change any data </string>
    <string name="insert_complet_name">Enter your full name </string>
    <string name="select_name">Select the name of University or Enter one </string>
    <string name="cel_may">Cell phone must have 10 digits </string>
    <string name="email_format">Mail format not valid, eg: user@domin.ext </string>
    <string name="pass_err">Passwords must have a minimum of 6 characters </string>
    <string name="pass_err2">Passwords do not match </string>
    <string name="fail_register">Validation error, Check the data entered </string>
    <string name="network_err">Problems with the network, Check your connection or try later </string>
    <string name="send">Send </string>
    <string name="update">Update </string>
    <string name="two_fields">You must, enter both fields </string>
    <string name="empty">There is still nothing here </string>
    <string name="see_all">See all </string>
    <string name="see">See </string>
    <string name="edit">Edit </string>
    <string name="save">Save </string>
    <string name="add">Add </string>
    <string name="share">Share </string>
    <string name="cancel">Cancel </string>
    <string name="select_subject">Select Subject </string>
    <string name="see_subjects">See subjects </string>
    <string name="deleting_err">Error deleting note </string>
    <string name="camera_err">Error, Camera not available </string>
    <string name="select_day">Select Day </string>
    <string name="search_subject">Search Subjects </string>
    <string name="all">All </string>
    <string name="subject_already">the subject already exists </string>
    <string name="subject_already_long">In your tabulated there is a subject, with the same name or code </string>
    <string name="fail_load_caht">Error while loading the conversation </string>
    <string name="keep_press_to_copy">Press and hold, to copy </string>
    <string name="keep_press_to_download">Press and hold, to copy </string>
    <string name="text_copy">Copy text </string>
    <string name="no_sent">Message&#8230; not sent </string>
    <string name="no_singup">Message&#8230; not registered </string>
    <string name="no_empty">Name must not be empty </string>
    <string name="new_group">Group new </string>
    <string name="send_to">Send to&#8230; </string>
    <string name="download">Download </string>
    <string name="left_group">Leave group </string>
    <string name="to_alert">Ass alert </string>
    <string name="active_alert">Alert active </string>
    <string name="signup_calendar">Record event in calendar </string>
    <string name="delete">Delete </string>
    <string name="ok">OK </string>
    <string name="add_contact">Add colleagues </string>
    <string name="edit_group">Edit Group </string>
    <string name="groups">Groups </string>
    <string name="chats">Conversations </string>
    <string name="contacts">Colleagues </string>
    <string name="msj_share1">Hi, download Academic Glider for your smartphone here https://play.google.com/store/apps/details?id=com.jhordyabonia.ag</string>
    <string name="msj_share2">Download it from </string>
    <string name="invite">Invite a colleagues through&#8230; </string>
    <string name="no_description">Without description </string>
    <string name="profil_no_load">Error during profile loading </string>
    <string name="cel">Celular </string>
    <string name="email">Email </string>
    <string name="name">Name </string>
    <string name="pass">Password </string>
    <string name="pass2">Repeat passwors </string>
    <string name="into">Entrar </string>
    <string name="forgiven_pass">Forgot your password? </string>
    <string name="signup">Sing Up </string>
    <string name="description_label">Group description&#8230;  </string>
    <string name="description">Description&#8230;  </string>
    <string name="request">Applications: </string>
    <string name="members">Members: </string>
    <string name="account_recover">Recover account </string>
    <string name="type">Type a message </string>
    <string name="hour">Hour </string>
    <string name="code">Code </string>
    <string name="locate">Location </string>
    <string name="frecuenly">Concurrence </string>
    <string name="date">Date </string>
    <string name="rate">Percentage </string>
    <string name="note">Qualification </string>
    <string name="credit">Credits </string>
    <string name="time">Duration (hours) </string>
    <string name="info_title">Information </string>
    <string name="text_help">Press and hold an item for more options </string>
    <string name="profil">Profil </string>
    <string name="delete_chat">Delete conversations </string>
    <string name="exit">Exit </string>
    <string name="account">Account </string>
    <string-array name="items_subject">
        <item>All</item>
        <item>Schedule</item>
        <item>Notes</item>
        <item>Readings</item>
        <item>Qualifiable</item>
        <item>Alerts</item>
    </string-array>
    <string name="classic_nav">Classic navigation </string>
    <string name="action_settings">New </string>
    <string name="title_activity_list_chat">AGlider Conversations </string>
    <string name="title_activity_list_chat_beta">AGlider Conversations (Beta) </string>
    <string name="title_activity_profil">ProfilActivity </string>
    <string name="title_activity_recuperar_cuenta">Recover account </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="no_qualify">Sin calificar</string>
    <string name="network_date">Se muestran, fecha y hora del servidor</string>
    <string name="info_FAQ">Frequent questions</string>
    <string name="info_see">See Tabulated Subjects</string>
    <string name="info_into_diplay">On the home screen, "My Glider" Touch the tab "SUBJECTS"</string>
    <string name="info_ver_horarios">See Schedules</string>
    <string name="info_ver_horarios0">To see the schedules of each day of the week. On the home screen, "My Glider" double-tap the "SCHEDULES "</string>
    <string name="info_ver_horarios1">To see the schedules of a subject. In the tabulations of subjects, keep the subject of interest pre-selected and later, in menu delplegado select the option "Schedules" </string>
    <string name="info_agregar_asignatura">Add a Subject</string>
    <string name="info_in_tab">In the subject tab, touch the tab (add) "+"</string>
    <string name="info_agregar_horarios">Add Schedules</string>
    <string name="info_0">With the tab "HOURS" selected, touch the tab (add) "+"</string>
    <string name="info_1">Add Qualifiable</string>
    <string name="info_2">In the subject tab, touch the subject of interest to open it. Scroll to the page "Qualifiable", sliding to the sides the pages, of the subject. Touch the tab (add) "+"</string>
    <string name="info_3">Add Alerts</string>
    <string name="info_4">In the subject tab, touch the subject of interest to open it. Scroll to the "Alerts" page, sliding pages of the subject. Touch the tab (add) "+"</string>
    <string name="info_5">Add Notes</string>
    <string name="info_6">In the subject tab, touch the subject of interest to open it. Scroll to the page "Apuntes", sliding pages to the sides, of the subject. Touch the tab (add) "+"</string>
    <string name="info_7">Download a subject from the Glider Community</string>
    <string name="info_8">On the home screen, "My Glider" open the "Context Menu ". select the option "Community Glider".</string>
    <string name="info_9">On the screen, "Community Glider" Browse or search among the subjects, shared by the community, by tapping the "Search" and filtering the content, by universities and / or names of the subjects.</string>
    <string name="info_10">Keep pressing the subject of interest, and in the menu displayed, select the option Download.</string>
    <string name="info_11">Share a subject in the Glider Community</string>
    <string name="info_12">On the home screen, "My Glider", in the tabulated subjects, hold the subject of interest and then, in the menu select the option "Share", in the displayed dialog, select the pages of the subject , that you want to share and touch the "Share" button.</string>
    <string name="info_13">How to take advantage</string>
    <string name="info_14">Create alerts of your qualifications</string>
    <string name="info_15">\nKeep alarms active</string>
    <string name="info_16">\nBefore creating a subject, search and download it from the Glider Community</string>
    <string name="info_17">\nEliminate expired alerts, notes and subjects that you no longer use</string>
    <string name="info_18">\nShare the subjects you have created, in the Glider Community, before eliminating them</string>
    <string name="info_19">\nSend your comments, or ideas on how to improve the app</string>
    <string name="info_20">\nDescribe and send the possible failures of the app, that you find</string>
    <string name="info_21">Developer</string>
    <string name="info_22">
        Academic Glider has many benefits:\n\n
        • Simple configuration: Teachers can add students directly or provide them with a code to join them. It is configured in just a few minutes.\n\n
        • Saves time: With a simple workflow and no need to use paper, teachers can create, review and grade tasks quickly from a single place.\n\n
        • Improved organization: Students can see all their assignments on a specific page, and all class materials (eg, documents, photos and videos) are automatically archived.\n\n
        • Improved communication: Teachers can use Academic Glider to send announcements and initiate classroom discussions instantly. Students can share resources with their classmates or answer questions in the news.\n\n
        • Accessible and secure:  Academic Glider does not contain advertisements, never uses your content or student data for advertising purposes and is offered free of charge.
    </string>
    <string name="info_23">Message</string>
    <string name="info_24">With the tab "HOURS" selected, touch the tab (add) "+"</string>
    <string name="info_feedback">FeedBack</string>
    <string name="name_noEmpty">The name can not be empty</string>
    <string name="onlyValues0_100">Only one numbers between 0 and 100</string>
    <string name="descriptionShort">The description must have a minimum of 10 characters</string>
    <string name="onlyValues0_5">Only one numbers between 0 and 5</string>
    <string name="codeShort">The code must have a minimum of 5 characters</string>
    <string name="noEmpty">It must not be empty</string>
    <string name="creditsShort">Only numbers between 1 and 20</string>
    <string name="theme">Select theme</string>
    <string name="vibrate">Vibration:</string>
    <string name="sound">Sounds:</string>
    <string name="settings">Settings</string>
    <string name="attach">Attach</string>
</resources>