<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_60dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginTop="@dimen/_15dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_share" />

        <TextView
            android:id="@+id/_hora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/share"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/_30dp" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_60dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/compartir_todo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/all" />

        <CheckBox
            android:id="@+id/compartir_horarios"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/horarios" />

        <CheckBox
            android:id="@+id/compartir_apuntes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/apuntes" />

        <CheckBox
            android:id="@+id/compartir_lecturas"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/lecturas" />

        <CheckBox
            android:id="@+id/compartir_calificables"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/calificables" />

        <CheckBox
            android:id="@+id/compartir_alertas"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/alertas" />

    </LinearLayout>

</LinearLayout>
