<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:gravity="center_horizontal"
         android:text="@string/app_name"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#9e9e3a" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:gravity="center"
         android:text="@string/account_recover"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#9e9e3a"
         android:textSize="30sp" />
        

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        
	    <ImageView
	        android:id="@+id/img_user"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginRight="-10dp"
	        android:scaleType="center"
	        android:src="@drawable/twotone_phone_android_white_18" />

	    <EditText
	        android:id="@+id/celular"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/cel"
	        android:inputType="textEmailAddress|number"
	        android:textColor="#ffffff">
	
	        <requestFocus />
	    </EditText>
	    
	</TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_25dp"
        android:layout_marginRight="@dimen/_25dp">
        
	    <ImageView
	        android:id="@+id/img_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginRight="-10dp"
	        android:scaleType="center"
	        android:src="@drawable/twotone_alternate_email_white_18" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:typeface="normal" />

	</TableRow>
    <Button
        android:id="@+id/recuperar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_25dp"
        android:layout_marginRight="@dimen/_25dp"
        android:background="#333"
        android:text="@string/account_recover"
        android:textColor="#9e9e3a"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff" />

</LinearLayout>

    </ScrollView>
