<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5dp"
        android:alpha="0.3"
        android:background="@drawable/shadow" >

    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_6dp"
        android:layout_marginRight="@dimen/_6dp"
        android:layout_marginTop="@dimen/_6dp"
        android:background="@drawable/tile"
        android:padding="@dimen/_3dp"
        android:paddingBottom="@dimen/_3dp"
        android:paddingLeft="@dimen/_5dp"
        android:paddingRight="@dimen/_5dp"
        android:paddingTop="@dimen/_3dp" >

        <FrameLayout
            android:id="@+id/selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="#0000ff"
            android:visibility="gone" >
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="@dimen/codeSize"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10dp"
                        android:layout_weight="0.0"
                        android:maxLines="1"
                        android:paddingRight="@dimen/_3dp"
                        android:text="@string/code"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/textSizeTitle"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="@dimen/codeSize"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/_3dp"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/textSizeTitle"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10dp"
                        android:text="@string/credit"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/note"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/textSize" />
                </TableRow>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_alarm_no"
                android:visibility="gone" />

        </LinearLayout>
    </FrameLayout>
</FrameLayout>